<resources>
    <string name="app_name">Autio</string>
    <string name="menu_player">Player</string>
    <string name="menu_map">Map</string>
    <string name="menu_my_stories">My Stories</string>
    <string name="menu_account">Account</string>
    <string name="sign_in_or_restore_purchase">Sign In <font color='#9C9FB5'>or</font> Restore Purchase</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="restore_purchase_underlined"><u>Restore Purchase</u></string>
    <string name="watch_how_it_works"><u>Watch How it Works</u></string>
    <string name="_1_is_donated_for_every_purchase_to_support_storytellers_in_underserved_communities_learn_more">$1 is donated for every purchase to\nsupport storytellers in underserved\ncommunities. <u>Learn more</u>.</string>
    <string name="_4_9_5_stars">4.9 / 5 Stars</string>
    <string name="love_this">Love this!</string>
    <string name="great_app_my_husband_and_i_are_fulltime_rv_rs_rv_n_free_and_this_is_the_perfect_app_to_use_while_traveling_the_us">“Great app! My husband and I are full-time RV’rs (RV-N-Free) and this is the PERFECT app to use while traveling the US.”</string>
    <string name="rv_n_free">— RV-N-Free</string>
    <string name="an_start">An start</string>
    <string name="focus_on_your_road_trip">Focus on your road trip</string>
    <string name="this_app_really_brings_the_trip_home_on_a_personal_level">“This app really brings the trip home on a personal level.”</string>
    <string name="ron_tg">— Ron TG</string>
    <string name="a_traveling_companion_not_to_be_missed">A traveling companion not to be missed</string>
    <string name="my_family_and_i_travel_often_amp_the_stories_we_hear_are_informative_amp_interesting_even_listening_near_my_home_has_introduced_me_to_things_i_didn_t_know"><![CDATA[“My family and I travel often & the stories we hear are informative & interesting. Even listening near my home has introduced me to things I didn’t know. ”]]></string>
    <string name="camswphd">— CAMSWPhD</string>
    <string name="enjoy_5_stories_free_tap_for_plans">Enjoy 5 Stories Free - Tap for Plans</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="cancel">Cancel</string>
    <string name="autio_offers_30_day_amp_3_year_nplans_that_don_t_automatically_renew_nas_well_as_an_annual_subscription"><![CDATA[Autio offers 30 Day & 3 Year\nplans that don’t automatically renew,\nas well as an annual subscription.]]></string>
    <string name="see_plans">See Plans</string>
    <string name="up_next">Up Next</string>
    <string name="my_stories_user_not_logged_message">You’ll need a subscription to create playlists, as well as bookmark, favorite, or download stories.</string>
    <string name="coming_soon_message">Very soon you’ll be able to create playlists, as well as bookmark, favorite, or download stories!</string>
    <string name="search">Search</string>
    <string name="most_popular">MOST POPULAR</string>
    <string name="account_header_title">The Perfect Gift for the Adventurer in Your Life</string>
    <string name="account_header_subtitle">Schedule delivery ahead of time (or at the last minute). Give the timeless gift of storytelling, travel inspiration, and great conversation.</string>
    <string name="gift_autio">Give the Gift of Autio</string>
    <string name="send_20_off_to_a_friend">Send 20% Off to a Friend</string>
    <string name="account_status">ACCOUNT STATUS</string>
    <string name="no_plan_selected">No Plan Selected</string>
    <string name="profile">Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="categories">Categories</string>
    <string name="organize_your_interests_from_the_top_down">Prioritize your interests for AUTIO to recommend more relevant types of stories</string>
    <string name="save_changes">Save Changes</string>
    <string name="name">NAME</string>
    <string name="contact">Contact</string>
    <string name="log_out">Log Out</string>
    <string name="delete_my_account"><u>Delete My Account</u></string>
    <string name="continue_as_guest">Continue As Guest</string>
    <string name="update">Update</string>
    <string name="welcome">Welcome, explorer!</string>
    <string name="app_description">Autio is a location-based\naudio app that alerts you to exciting\nstories along your journey.\n\nWe’ll need a few permissions\nto get started…</string>
    <string name="tagline">Every place has a story.\nNow every story has a place.</string>
    <string name="notifications">Notifications</string>
    <string name="in_app_location">In-App Location</string>
    <string name="background_location">Background Location</string>
    <string name="explanation_on_notifications">So you\'ll know when you’re near a story\nyou\'ve never heard before.</string>
    <string name="explanation_on_in_app_location">Select “precise” and “while using the app” to discover nearby stories, especially on road.</string>
    <string name="explanation_on_background_location">Background location gives you the best experience. The magic of Autio is discovering stories as you drive even if you’re not using the app. Let Autio use your location, even if you’re in your favorite navigation or music apps. We never share or sell your location information to third parties.</string>
    <string name="background_location_not_active">Location inaccurate. Tap to enable ‘Always On’ to ensure relevant story notifications.</string>
    <string name="traveler_plan_title">Traveler - only $3/month*</string>
    <string name="traveler_plan_description">1 YEAR SUBSCRIPTION • $35.99 paid annually</string>
    <string name="traveler_plan_note">You\'ll be reminded before renewal. You can cancel any time.</string>
    <string name="adventurer_discount">35% OFF, BEST VALUE</string>
    <string name="single_trip_plan_title">Single Trip</string>
    <string name="single_trip_plan_description">30 DAYS PASS • $29.99</string>
    <string name="single_trip_note">One-time payment.</string>
    <string name="adventurer_plan_title">Adventurer</string>
    <string name="adventurer_plan_description">3 YEAR MEMBER • <strike>$107.97</strike> $69.99</string>
    <string name="adventurer_plan_note">One-time payment.</string>
    <string name="guest_authenticate_message">You\'re not currently signed in.\nCreate an account or sign in to\nmanage your account.</string>
    <string name="contact_support">Questions about your account or subscription? <u>Contact Autio</u>.</string>
    <string name="no_story_loaded">Pick a story from the map</string>
    <string name="empty_bookmarks_message">Bookmarked stories will appear on this list. Bookmarks are only visible to you and are a great way to earmark stories to revisit later.</string>
    <string name="empty_favorites_message">Liked stories will appear on this list. Everyone can see likes — they’re a great way to show some love for your absolute favorite stories.</string>
    <string name="empty_history_message">Listened-to stories will appear here in the order you discover them. Start listening now by choosing a story from the map.</string>
    <string name="empty_downloads_message">Tap the “…” by any story to download the audio content for offline use.</string>
    <string name="status_subscribed">Subscribed</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="welcome_nav_to_permissions">Let\'s go!</string>
    <string name="set_notification_permissions">Set Notifications Permissions</string>
    <string name="set_in_app_location_permissions">Set Location Permissions</string>
    <string name="set_background_permissions">Set Background Permissions</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="choose_a_plan">Choose a Plan</string>
    <string name="manage_subscription"><u>Manage Subscription</u></string>
    <string name="continue_free_trial">Continue Free Trial</string>
    <string name="try_5_stories_free">Try 5 Stories Free</string>
    <string name="back">Back</string>
    <string name="learn_more">Learn More</string>
    <string name="clear_playlist">Clear</string>
    <string name="logo_description">Autio logo</string>
    <string name="notification_icon_description">Notification icon</string>
    <string name="location_icon_description">Location icon</string>
    <string name="background_location_icon_description">Background location icon</string>
    <string name="app_store_rate">Average rating of the app in stores</string>
    <string name="moth_logo">The Moth group\'s logo</string>
    <plurals name="toolbar_stories_subtitle">
        <item quantity="one">1 STORY</item>
        <item quantity="other">%1$d STORIES</item>
    </plurals>
    <plurals name="toolbar_stories_with_time_subtitle">
        <item quantity="one">1 STORY — %2$d MINUTES</item>
        <item quantity="other">%1$d STORIES — %2$d MINUTES</item>
    </plurals>
    <string name="snack_bar_no_connection">No Internet Connection</string>
    <string name="snack_bar_allow_notifications">Allow Notifications</string>
    <string name="snack_bar_allow_location_access">Allow Location Access</string>
    <string name="moth_advertisement_title">Help the Next Generation\nTell Their Stories</string>
    <string name="moth_advertisement_body">Autio is a proud sponsor of The Moth Community Engagement Program, which provides the space, tools and expertise for people to practice the art and craft of personalstorytelling. We partner with community organizations, cultural institutions and non-profits to host workshops that inspire confidence and self-reflection and deepen connections within and between communities.</string>
    <string name="action_download">Download</string>
    <string name="action_directions">Directions</string>
    <string name="divider">Divider component for separating visuals</string>
    <string name="notification_channel">Now Playing</string>
    <string name="notification_channel_description">Shows what story is currently playing</string>
    <string name="map_list_title">From the Map</string>
    <string name="map_list_subtitle">Adjust the map for more stories</string>
    <string name="allowed_caller_log">
        Caller has a valid certificate, but its package does not match any expected package for the
        given certificate. To allow this caller, add the following to the allowed callers list:\n
        <![CDATA[
        <signature name=\"%1$s\" package=\"%2$s\">\n\t<key>%3$s</key>\n</signature>\n
        ]]>
    </string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="story_art_alt">Story art</string>
    <string name="duration_unknown">--:--</string>
    <string name="duration_format">%1$d:%2$02d</string>
    <string name="address">%1$s, %2$s</string>
    <string name="my_stories_bookmarks">Bookmarks</string>
    <string name="my_stories_favorites">Favorites</string>
    <string name="my_stories_history">History</string>
    <string name="my_stories_downloaded_stories">Downloaded Stories</string>
    <string name="loading_loading_text">Loading</string>
    <string name="youtube_using_autio_app_video_url" translatable="false">https://www.youtube.com/watch?v=SvbahDL4aYc&amp;ab_channel=Autio"</string>
    <string name="sign_in_error_text">Please check your email or password</string>
    <string name="subscribe_fragment_sign_in_link">Sign In</string>
    <string name="subscribe_fragment_restore_purchase_link">Restore Purchase</string>
</resources>