<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/splash_back"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutMothDonation">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_store_rate"
            android:src="@drawable/ic_stars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_regular"
            android:text="@string/_4_9_5_stars"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/text_view_border"
            android:orientation="vertical"
            android:padding="18dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:text="@string/a_traveling_companion_not_to_be_missed"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/lora_regular"
                android:text="@string/my_family_and_i_travel_often_amp_the_stories_we_hear_are_informative_amp_interesting_even_listening_near_my_home_has_introduced_me_to_things_i_didn_t_know"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:text="@string/camswphd"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/text_view_border"
            android:orientation="vertical"
            android:padding="18dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:text="@string/focus_on_your_road_trip"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/lora_regular"
                android:text="@string/this_app_really_brings_the_trip_home_on_a_personal_level"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:text="@string/ron_tg"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/text_view_border"
            android:orientation="vertical"
            android:padding="18dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/an_start"
                    android:src="@drawable/ic_star" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:text="@string/love_this"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/lora_regular"
                android:text="@string/great_app_my_husband_and_i_are_fulltime_rv_rs_rv_n_free_and_this_is_the_perfect_app_to_use_while_traveling_the_us"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:text="@string/rv_n_free"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_choose_plan"
            style="@style/Button.Shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:maxLines="1"
            android:text="@string/choose_a_plan" />

        <Button
            android:id="@+id/btn_stories_free2"
            style="@style/Button.Shape.transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="24dp"
            android:drawableEnd="@drawable/ic_circled_arrow"
            android:text="@string/try_5_stories_free" />

    </LinearLayout>

</layout>