<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/most_popular"
        style="@style/TextViewInterBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/most_popular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/button_background"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp"
        app:layout_constraintTop_toBottomOf="@+id/most_popular">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                style="@style/BoldTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/traveler_plan_title"
                android:textColor="@color/contrasting_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:gravity="center"
                android:text="@string/traveler_plan_description"
                android:textColor="@color/gray_letter"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:gravity="center"
                android:text="@string/traveler_plan_note"
                android:textColor="@color/gray_letter"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>